--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,10 +13,10 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: git@github.com:minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-12.1
-  DEVICE: r9q
-  DT_LINK: https://github.com/klabit87/android_device_samsung_r9q
-  DT_PATH: device/samsung/r9q
+  MANIFEST: git@github.com:minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-11.0
+  DEVICE: cph2349
+  DT_LINK: https://github.com/ZorEl212/twrp_oppo_cph2349.git
+  DT_PATH: device/oppo/cph2349
   TARGET: recoveryimage
   OUTPUT: recovery.img
 
