--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -61,7 +61,7 @@ jobs:
        - name: Build
          run: |
               cd work
-              . build/envsetup.sh &&lunch twrp_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
+              . build/envsetup.sh &&lunch twrp_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka -j3 $TARGET
               sudo apt update && sudo apt install zip
               sudo apt update && sudo apt install zip
               zip -r rec.zip /home/runner/work/Recovery-Builder/Recovery-Builder/work/out/target/product/$DEVICE/$OUTPUT
